package protocol;

message S2SSystem {
	
	message GetType{
		optional int32 type = 1;
	}
	
	message LoginInfo{
		optional int32 type = 1 [default= 1];
		optional string   name = 2;  
		optional string   passworld = 3;
	}

	message RegisterInfo {
		optional int32 type = 1 [default= 2];
		optional string name = 2;
		optional int32 age = 3;
		optional string passworld = 4;
		optional int32 sex = 5;
	}
	
	message Request {
	    optional int32 type = 1 [default= 3];
		optional int32 result = 2;
	}

	message ResultChatMsg {
		repeated int32 type = 1; // repeated 不能使用default[default= 4]
		repeated string playername = 2;
		repeated string msg = 3;
	}
	
	message ResultInfo {
		optional int32 type = 1 [default= 5];
		optional int32 result = 2;
	}

}